# sdypy_io_tdms

./: .gitignore  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
sdypy_io_tdms/: __init__.py  tdms.py
tests/: test_tdms.py
tests/static/: 20200409_043000.tdms  20200409_220000.tdms  faulty_tdms_01.tdms
tests/static/good/: good_tdms_2.tdms
